# Algorithm

./: CMakeLists.txt
main/include/: base.h
main/include/algorithm/neuralNetworks/: ConnectedModule.h  FullyConnectedNeuralNetwork.h  base.h  connectedModule.h
main/include/algorithm/neuralNetworks/class/: FullyConnected.h  FullyConnectedNeuralNetwork.h  Neuron.h  NeuronHidden.h  NeuronInput.h  NeuronOutput.h  Neurons.h  TrainingSet.h  connectedMod.h  neurons.h
main/include/algorithm/neuralnetworks/: FullyConnectedNeuralNetwork.h
main/include/module/io/: IOSupport.h
main/include/module/performance/: timeP.h
main/src/algorithm/neuralNetworks/class/: FullyConnectedNeuralNetwork.cpp  Neuron.cpp  NeuronHidden.cpp  NeuronInput.cpp  NeuronOutput.cpp  Neurons.cpp  TrainingSet.cpp  neurons.cpp
main/src/algorithm/neuralNetworks/fullyConnected/: FullyConnected.cpp  FullyConnectedNeuralNetwork.cpp  fullyConnectedStart.cpp
main/src/algorithm/neuralnetworks/fullyconnected/: FullyConnectedNeuralNetwork.cpp
main/src/base/: base.cpp
main/src/module/configuration/: Configuration.cpp
main/src/module/io/: IOSupport.cpp
main/src/module/performance/: timeP.h
main/src/module/performance/time/: TimePoint.cpp  TimePoint.h
main/src/start/: start.cpp
